--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@notionhq/client": "^2.2.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.2",
     "express-pino-logger": "^7.0.0",
     "husky": "^8.0.0",
+    "nodemon": "^2.0.20",
     "pino": "^8.7.0",
     "pino-pretty": "^9.1.1"
   },
